--- a/calculadora.html
+++ b/calculadora.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>calculadora</title>
+    <script type= "text/javascript" src=" calculadora.js"></script>
   </head>
   <body>
     <H1>exemplo de calculadora</H1>
